[package]
name = "webcam-live"
version = "0.1.0"
authors = ["zhifou"]

[dependencies]
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
sycamore = { version = "0.8.0", features = ["serde", "futures"]}
tracing = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "VideoTrack",
    "HtmlVideoElement",
    "HtmlSelectElement",
    "Navigator",
    "MediaStream",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaStreamConstraints",
    "Permissions",
    "MediaDevices"
]